--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <h1>Hey MaMMa</h1>
-    <h2>New code </h2>
+    <div class="dd">
+        <p>
+            Are you Know me? This my Frist Website!!
+            <img src="being-devloper-1.jpg" alt="">
+        </p>
+    </div>
     
 </body>
 </html>
