--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <h1>Hey MaMMa</h1>
-    <div class="dd">
-        <p>
+    <div>
+        <p class="pp">
             Are you Know me? This my Frist Website!!
-            <img src="being-devloper-1.jpg" alt="">
+            
         </p>
+        <img class="dd" src="being-devloper-1.jpg" alt="">
     </div>
     
 </body>
